[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://Key.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1575, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Terrain" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -524243, 0, 262152, -458711, 0, 458765, -458710, 0, 458766, -458709, 0, 458766, -458708, 0, 458766, -458707, 0, 458767, -327648, 0, 458765, -327647, 0, 458766, -327646, 0, 458766, -327645, 0, 458766, -327644, 0, 458766, -327643, 0, 458767, -196581, 0, 458765, -196580, 0, 458766, -196579, 0, 458767, -131052, 0, 17, -131051, 0, 18, -131050, 0, 18, -131049, 0, 18, -131048, 0, 19, -65516, 0, 65553, -65515, 0, 65554, -65514, 0, 65554, -65513, 0, 65554, -65512, 0, 65555, 20, 0, 131089, 21, 0, 131090, 22, 0, 262161, 23, 0, 131090, 24, 0, 131091, 65550, 0, 1, 65551, 0, 2, 65552, 0, 3, 65558, 0, 327696, 131094, 0, 327696, 196626, 0, 0, 196630, 0, 393234, 196631, 0, 262163, 196632, 0, 393235, 262166, 0, 327696, 327700, 0, 327698, 327701, 0, 327699, 327702, 0, 393232, 393238, 0, 327696, 458774, 0, 393234, 458775, 0, 327699, 458776, 0, 393235, 524310, 0, 327696, 524359, 0, 196609, 524360, 0, 196610, 524361, 0, 196610, 524362, 0, 196610, 524363, 0, 196610, 524364, 0, 196610, 524365, 0, 196610, 524366, 0, 196610, 524367, 0, 196610, 524368, 0, 196610, 524369, 0, 196610, 524370, 0, 196610, 524371, 0, 196610, 524372, 0, 196610, 524373, 0, 196610, 524374, 0, 196610, 524375, 0, 196610, 524376, 0, 196610, 524377, 0, 196610, 524378, 0, 196610, 524379, 0, 196610, 524380, 0, 196610, 524381, 0, 196610, 524382, 0, 196610, 524383, 0, 196610, 524384, 0, 196610, 524385, 0, 196610, 524386, 0, 196610, 524387, 0, 196610, 524388, 0, 196610, 524389, 0, 196610, 524390, 0, 196610, 524391, 0, 196610, 524392, 0, 196611, 589844, 0, 327698, 589845, 0, 327699, 589846, 0, 393232, 589894, 0, 196609, 589895, 0, 65541, 589896, 0, 393218, 589897, 0, 393218, 589898, 0, 393218, 589899, 0, 393218, 589900, 0, 393218, 589901, 0, 393218, 589902, 0, 393218, 589903, 0, 393218, 589904, 0, 393218, 589905, 0, 393218, 589906, 0, 393218, 589907, 0, 393218, 589908, 0, 393218, 589909, 0, 393218, 589910, 0, 393218, 589911, 0, 393218, 589912, 0, 393218, 589913, 0, 393218, 589914, 0, 393218, 589915, 0, 393218, 589916, 0, 393218, 589917, 0, 393218, 589918, 0, 393218, 589919, 0, 393218, 589920, 0, 393218, 589921, 0, 393218, 589922, 0, 393218, 589923, 0, 393218, 589924, 0, 393218, 589925, 0, 393218, 589926, 0, 393218, 589927, 0, 393218, 589928, 0, 393219, 655382, 0, 393233, 655425, 0, 196609, 655426, 0, 196610, 655427, 0, 196610, 655428, 0, 196610, 655429, 0, 196610, 655430, 0, 65541, 655431, 0, 393218, 655432, 0, 393218, 655433, 0, 393218, 655434, 0, 393218, 655435, 0, 393218, 655436, 0, 393218, 655437, 0, 393218, 655438, 0, 393218, 655439, 0, 393218, 655440, 0, 393218, 655441, 0, 393218, 655442, 0, 393218, 655443, 0, 393218, 655444, 0, 393218, 655445, 0, 393218, 655446, 0, 393218, 655447, 0, 393218, 655448, 0, 393218, 655449, 0, 393218, 655450, 0, 393218, 655451, 0, 393218, 655452, 0, 393218, 655453, 0, 393218, 655454, 0, 393218, 655455, 0, 393218, 655456, 0, 393218, 655457, 0, 393218, 655458, 0, 393218, 655459, 0, 393218, 655460, 0, 393218, 655461, 0, 393218, 655462, 0, 393218, 655463, 0, 393218, 655464, 0, 393219, 720897, 0, 65537, 720898, 0, 65538, 720899, 0, 65538, 720900, 0, 65538, 720901, 0, 65538, 720902, 0, 65538, 720903, 0, 65538, 720904, 0, 65538, 720905, 0, 65538, 720906, 0, 65538, 720907, 0, 65538, 720908, 0, 65549, 720909, 0, 65549, 720910, 0, 65549, 720911, 0, 65538, 720912, 0, 65538, 720913, 0, 65538, 720914, 0, 65538, 720915, 0, 65538, 720916, 0, 65538, 720917, 0, 65538, 720918, 0, 65538, 720919, 0, 65538, 720920, 0, 65538, 720921, 0, 65539, 720945, 0, 196609, 720946, 0, 196610, 720947, 0, 196610, 720948, 0, 196610, 720949, 0, 196610, 720950, 0, 196610, 720951, 0, 196610, 720952, 0, 196610, 720953, 0, 196610, 720954, 0, 196610, 720955, 0, 196610, 720956, 0, 196610, 720957, 0, 196610, 720958, 0, 196610, 720959, 0, 196610, 720960, 0, 196610, 720961, 0, 65541, 720962, 0, 393218, 720963, 0, 393218, 720964, 0, 393218, 720965, 0, 393218, 720966, 0, 393218, 720967, 0, 393218, 720968, 0, 393218, 720969, 0, 393218, 720970, 0, 393218, 720971, 0, 393218, 720972, 0, 393218, 720973, 0, 393218, 720974, 0, 393218, 720975, 0, 393218, 720976, 0, 393218, 720977, 0, 393218, 720978, 0, 393218, 720979, 0, 393218, 720980, 0, 393218, 720981, 0, 393218, 720982, 0, 393218, 720983, 0, 393218, 720984, 0, 393218, 720985, 0, 393218, 720986, 0, 393218, 720987, 0, 393218, 720988, 0, 393218, 720989, 0, 393218, 720990, 0, 393218, 720991, 0, 393218, 720992, 0, 393218, 720993, 0, 393218, 720994, 0, 393218, 720995, 0, 393218, 720996, 0, 393218, 720997, 0, 393218, 720998, 0, 393218, 720999, 0, 393218, 721000, 0, 393219, 786433, 0, 393217, 786434, 0, 393218, 786435, 0, 393218, 786436, 0, 393218, 786437, 0, 393218, 786438, 0, 393218, 786439, 0, 393218, 786440, 0, 393218, 786441, 0, 393218, 786442, 0, 393218, 786443, 0, 393218, 786444, 0, 196621, 786445, 0, 196621, 786446, 0, 196621, 786447, 0, 393218, 786448, 0, 393218, 786449, 0, 393218, 786450, 0, 393218, 786451, 0, 393218, 786452, 0, 393218, 786453, 0, 393218, 786454, 0, 393218, 786455, 0, 393218, 786456, 0, 393218, 786457, 0, 393219, 786481, 0, 393217, 786482, 0, 393218, 786483, 0, 393218, 786484, 0, 393218, 786485, 0, 393218, 786486, 0, 393218, 786487, 0, 393218, 786488, 0, 393218, 786489, 0, 393218, 786490, 0, 393218, 786491, 0, 393218, 786492, 0, 393218, 786493, 0, 393218, 786494, 0, 393218, 786495, 0, 393218, 786496, 0, 393218, 786497, 0, 393218, 786498, 0, 393218, 786499, 0, 393218, 786500, 0, 393218, 786501, 0, 393218, 786502, 0, 393218, 786503, 0, 393218, 786504, 0, 393218, 786505, 0, 393218, 786506, 0, 393218, 786507, 0, 393218, 786508, 0, 393218, 786509, 0, 393218, 786510, 0, 393218, 786511, 0, 393218, 786512, 0, 393218, 786513, 0, 393218, 786514, 0, 393218, 786515, 0, 393218, 786516, 0, 393218, 786517, 0, 393218, 786518, 0, 393218, 786519, 0, 393218, 786520, 0, 393218, 786521, 0, 393218, 786522, 0, 393218, 786523, 0, 393218, 786524, 0, 393218, 786525, 0, 393218, 786526, 0, 393218, 786527, 0, 393218, 786528, 0, 393218, 786529, 0, 393218, 786530, 0, 393218, 786531, 0, 393218, 786532, 0, 393218, 786533, 0, 393218, 786534, 0, 393218, 786535, 0, 393218, 786536, 0, 393219, 851969, 0, 393217, 851970, 0, 393218, 851971, 0, 393218, 851972, 0, 393218, 851973, 0, 393218, 851974, 0, 393218, 851975, 0, 393218, 851976, 0, 393218, 851977, 0, 393218, 851978, 0, 393218, 851979, 0, 393218, 851980, 0, 196621, 851981, 0, 196621, 851982, 0, 196621, 851983, 0, 393218, 851984, 0, 393218, 851985, 0, 393218, 851986, 0, 393218, 851987, 0, 393218, 851988, 0, 393218, 851989, 0, 393218, 851990, 0, 393218, 851991, 0, 393218, 851992, 0, 393218, 851993, 0, 393219, 852017, 0, 393217, 852018, 0, 393218, 852019, 0, 393218, 852020, 0, 393218, 852021, 0, 393218, 852022, 0, 393218, 852023, 0, 393218, 852024, 0, 393218, 852025, 0, 393218, 852026, 0, 393218, 852027, 0, 393218, 852028, 0, 393218, 852029, 0, 393218, 852030, 0, 393218, 852031, 0, 393218, 852032, 0, 393218, 852033, 0, 393218, 852034, 0, 393218, 852035, 0, 393218, 852036, 0, 393218, 852037, 0, 393218, 852038, 0, 393218, 852039, 0, 393218, 852040, 0, 393218, 852041, 0, 393218, 852042, 0, 393218, 852043, 0, 393218, 852044, 0, 393218, 852045, 0, 393218, 852046, 0, 393218, 852047, 0, 393218, 852048, 0, 393218, 852049, 0, 393218, 852050, 0, 393218, 852051, 0, 393218, 852052, 0, 393218, 852053, 0, 393218, 852054, 0, 393218, 852055, 0, 393218, 852056, 0, 393218, 852057, 0, 393218, 852058, 0, 393218, 852059, 0, 393218, 852060, 0, 393218, 852061, 0, 393218, 852062, 0, 393218, 852063, 0, 393218, 852064, 0, 393218, 852065, 0, 393218, 852066, 0, 393218, 852067, 0, 393218, 852068, 0, 393218, 852069, 0, 393218, 852070, 0, 393218, 852071, 0, 393218, 852072, 0, 393219, 917505, 0, 393217, 917506, 0, 393218, 917507, 0, 393218, 917508, 0, 393218, 917509, 0, 393218, 917510, 0, 393218, 917511, 0, 393218, 917512, 0, 393218, 917513, 0, 393218, 917514, 0, 393218, 917515, 0, 393218, 917516, 0, 196621, 917517, 0, 196621, 917518, 0, 196621, 917519, 0, 393218, 917520, 0, 393218, 917521, 0, 393218, 917522, 0, 393218, 917523, 0, 393218, 917524, 0, 393218, 917525, 0, 393218, 917526, 0, 393218, 917527, 0, 393218, 917528, 0, 393218, 917529, 0, 393219, 917553, 0, 393217, 917554, 0, 393218, 917555, 0, 393218, 917556, 0, 393218, 917557, 0, 393218, 917558, 0, 393218, 917559, 0, 393218, 917560, 0, 393218, 917561, 0, 393218, 917562, 0, 393218, 917563, 0, 393218, 917564, 0, 393218, 917565, 0, 393218, 917566, 0, 393218, 917567, 0, 393218, 917568, 0, 393218, 917569, 0, 393218, 917570, 0, 393218, 917571, 0, 393218, 917572, 0, 393218, 917573, 0, 393218, 917574, 0, 393218, 917575, 0, 393218, 917576, 0, 393218, 917577, 0, 393218, 917578, 0, 393218, 917579, 0, 393218, 917580, 0, 393218, 917581, 0, 393218, 917582, 0, 393218, 917583, 0, 393218, 917584, 0, 393218, 917585, 0, 393218, 917586, 0, 393218, 917587, 0, 393218, 917588, 0, 393218, 917589, 0, 393218, 917590, 0, 393218, 917591, 0, 393218, 917592, 0, 393218, 917593, 0, 393218, 917594, 0, 393218, 917595, 0, 393218, 917596, 0, 393218, 917597, 0, 393218, 917598, 0, 393218, 917599, 0, 393218, 917600, 0, 393218, 917601, 0, 393218, 917602, 0, 393218, 917603, 0, 393218, 917604, 0, 393218, 917605, 0, 393218, 917606, 0, 393218, 917607, 0, 393218, 917608, 0, 393219, 983041, 0, 393217, 983042, 0, 393218, 983043, 0, 393218, 983044, 0, 393218, 983045, 0, 393218, 983046, 0, 393218, 983047, 0, 393218, 983048, 0, 393218, 983049, 0, 393218, 983050, 0, 393218, 983051, 0, 393218, 983052, 0, 196621, 983053, 0, 196621, 983054, 0, 196621, 983055, 0, 393218, 983056, 0, 393218, 983057, 0, 393218, 983058, 0, 393218, 983059, 0, 393218, 983060, 0, 393218, 983061, 0, 393218, 983062, 0, 393218, 983063, 0, 393218, 983064, 0, 393218, 983065, 0, 393219, 983089, 0, 393217, 983090, 0, 393218, 983091, 0, 393218, 983092, 0, 393218, 983093, 0, 393218, 983094, 0, 393218, 983095, 0, 393218, 983096, 0, 393218, 983097, 0, 393218, 983098, 0, 393218, 983099, 0, 393218, 983100, 0, 393218, 983101, 0, 393218, 983102, 0, 393218, 983103, 0, 393218, 983104, 0, 393218, 983105, 0, 393218, 983106, 0, 393218, 983107, 0, 393218, 983108, 0, 393218, 983109, 0, 393218, 983110, 0, 393218, 983111, 0, 393218, 983112, 0, 393218, 983113, 0, 393218, 983114, 0, 393218, 983115, 0, 393218, 983116, 0, 393218, 983117, 0, 393218, 983118, 0, 393218, 983119, 0, 393218, 983120, 0, 393218, 983121, 0, 393218, 983122, 0, 393218, 983123, 0, 393218, 983124, 0, 393218, 983125, 0, 393218, 983126, 0, 393218, 983127, 0, 393218, 983128, 0, 393218, 983129, 0, 393218, 983130, 0, 393218, 983131, 0, 393218, 983132, 0, 393218, 983133, 0, 393218, 983134, 0, 393218, 983135, 0, 393218, 983136, 0, 393218, 983137, 0, 393218, 983138, 0, 393218, 983139, 0, 393218, 983140, 0, 393218, 983141, 0, 393218, 983142, 0, 393218, 983143, 0, 393218, 983144, 0, 393219 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 100, 435 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_bottom = 600
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.4
drag_margin_top = 0.4
drag_margin_right = 0.4
drag_margin_bottom = 0.4

[node name="KillPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane"]
position = Vector2( 1500, 800 )
shape = SubResource( 1 )

[node name="Coin" parent="." instance=ExtResource( 4 )]
position = Vector2( 2782, 275 )

[node name="Coin2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1057, 254 )

[node name="Coin3" parent="." instance=ExtResource( 4 )]
position = Vector2( 2269, -435 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_right = 81.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
text = "Coins: 0"
uppercase = true

[node name="WinLabel" type="Label" parent="HUD"]
margin_left = 400.0
margin_top = 150.0
margin_right = 600.0
margin_bottom = 200.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1
uppercase = true

[node name="Key" parent="." instance=ExtResource( 5 )]
position = Vector2( 4659, 292 )

[connection signal="body_entered" from="KillPlane" to="." method="_on_KillPlane_body_entered"]
[connection signal="body_entered" from="Coin" to="." method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coin2" to="." method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coin3" to="." method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Key" to="." method="_on_Key_body_entered"]
